removed static from RoomRepository and turnlightsOn Method